# lab7-proof

./: .env.template.lab7-proof  .env.template.oaa-api-library  .gitignore  .pre-commit-config.yaml  ALWAYS_ON_AGENT_README.md  ATLAS_INTEGRATION_GUIDE.md  AUTOMATION_SETUP.md  CHANGELOG.md  CIVIC_MOUNT_IMPLEMENTATION.md  CIVIC_SYSTEM_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  CUSTOS_CHARTER.md  DEPLOYMENT_GUIDE.md  E2E_PIPELINE_RESULTS.md  IMPLEMENTATION_SUMMARY.md  INTEGRITY_REWARD_ENGINE_SUMMARY.md  LICENSE  MCP_HEALTH_SENTINEL_README.md  MERGE_SYSTEM_SUMMARY.md  Makefile  OAA_README.md  PAL_INTEGRATION_README.md  PROMPT.md  Pulse_Ledger_Master_Template.json  Pulse_Ledger_Master_Template.md  QUALITY_TRACKING_INTEGRATION.md  README.md  SECURITY_GUIDE.md  SECURITY_SETUP.md  SENTINEL_DEPLOYMENT.md  THOUGHT_BROKER_INTEGRATION.md  WEBDATA_SCOUT_README.md  architecture.yaml  atlas-attestation.json  civic_mount_client.py  demo_llm_boarding.py  diagram.md  docker-compose.yml  env.example  (+25 more)
.civic/: .env.example  README.md  atlas.manifest.json  attestation.json  biodna.json  change.proposal.json  change.spec.md  change.tests.json  integration-test.py  ledger-hook.py  progressive-delivery.yaml  safety-rails.yaml  setup-civic-system.py  shield-policy.json  virtue_accords.yaml
.copilot/: proof.json  suggestions.json
.cursor/: tasks.json
.husky/: pre-commit
app/: main.py
artifacts/: change_proposal.yaml  claude_report.json  cursor_report.json  deepseek_report.json  gpt_report.json  ledger_attestation.json  quorum_report.json
config/: atlas-config.json  docker-compose.yml  render-auto-merge.yaml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: API.md  DEPLOYMENT.md  INDEPENDENCE_MANIFEST.md  pal_dashboard.html
examples/: quality_integration_example.py
gateway/: hmac.ts  server.ts
global-health-sentinel/: README.md  echo_bridge.py  env.example  pulse_sentinel.py  shield_policy.py  validate.py
ledger/: episodes.jsonl
lib/: webDataScout.ts
oaa/: OaaTab.tsx  README.md  hub.manifest.yaml  hub.ts  integration.md  package.json  registry.ts  tsconfig.json
ops/: policy.json  scout-slo.yml
pal_config/: lab7.yaml
policies/: copilot-verify.json
scripts/: apply_edit_pack.sh  atlas-quickstart.sh  auto_commit_changes.py  auto_merge_edits.py  broker-client.ts  canary_bump  canary_bump.py  captureCopilotSuggestions.mjs  check_openapi.sh  configure_lab7.sh  echo_hook.py  edits_whitelist.txt  generate_pal_api_json.py  generate_pal_badges.py  generate_pal_dashboard.py  health_monitor.py  inject_placeholders.sh  install_hooks.sh  integrity_check.py  lab7-background-agent.service  lab7_background_agent.py  mcp_github_render_integration.py  ops_apply.py  (+12 more)
(+272 files in other folders)
